# MultiAgenticSwarm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_NODE_IMPLEMENTATION.md  CLEAN_AGENT_IMPLEMENTATION.md  CORE_STATE_SCHEMA_SUMMARY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  LICENSE  Makefile  PACKAGE_READY.md  README.md  STATE_REDUCER_DEMO_SUMMARY.md  TICKET_6_COMPLETE.md  demo_comprehensive_state_reducers.py  demo_enhanced_state.py  demo_enhanced_state_config.py  demo_state_schema.py  docker-compose.yml  example.py  example_agent_node.py  fix_python.sh  progress_board.json  prompt_parser.ipynb  pyproject.toml  real_world_example.py  simple_example.py  test_agent_node.py  test_clean_agent.py  test_debug.py  test_imports.py  test_mcp_simple.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: cd.yml  ci.yml  dependencies.yml  docs.yml  quality.yml
config/: settings.py  state_config.yaml
demo_workspace/: collaboration_report_collaborative.json  progress_board.json
demo_workspace/flutter_music_app/: pubspec.yaml
docs/: AGENT_SYSTEM.md  ARCHITECTURE.md  CI-CD.md  COLLABORATION_PATTERNS.md  CORE_STATE_IMPLEMENTATION.md  DEBUGGING_AND_MONITORING.md  GRAPH_COMPILATION.md  HUMAN_IN_THE_LOOP.md  PRE_COMMIT_SETUP.md  RUNTIME_DYNAMICS.md  STATE_MANAGMENT.md  STATE_MIGRATION.md  TOOL_MANAGEMENT.md  highlevel_architecture.md  question_and_answer.md  tickets.md
examples/: clean_agent_demo.py  mcp_client_example.py  mcp_integration_demo.py  mcp_server_example.py  state_management_demo.py
examples/agentswarm/: custom_implementation.py
examples/flutter/: create_app_with_llm.py  create_music_app.py  simple_flutter_demo.py
examples/flutter_music_app/: README_COLLABORATION.md  README_COLLABORATION_DEMO.md  config.yaml  demo_collaborative_creation.py  progress_board.json
examples/flutter_music_app/agents/: __init__.py  audio_agent.py  data_agent.py  data_agent_clean.py  ui_agent.py
examples/flutter_music_app/test_workspace/: progress_board.json
examples/ticket_6_agent_node/: README.md
flutter_music_app_clean/: AGENT_COLLABORATION_SUCCESS.md  README.md  pubspec.yaml
implementations/: __init__.py
implementations/agentswarm/: __init__.py
implementations/agentswarm/agents/: __init__.py  architect.py  debugger.py  developer.py  reviewer.py  tester.py
implementations/agentswarm/core/: __init__.py  base.py  patterns.py  types.py
implementations/flutterswarm/: README.md  __init__.py  swarm.py
implementations/flutterswarm/agents/: __init__.py  architect.py  developer.py  tester.py  ui_designer.py
implementations/flutterswarm/tools/: __init__.py  dart_cli.py  file_system.py  flutter_cli.py
multiagenticswarm/: __init__.py  __main__.py  logging.py
multiagenticswarm/api/: server.py
multiagenticswarm/core/: __init__.py  agent.py  automation.py  base_tool.py  collaborative_system.py  delegation.py  mcp_integration.py  prompt_parser.py  prompt_schemas.py  state.py  state_config.py  state_migration.py  state_reducers.py  system.py  task.py  test_state_reducers.py  tool.py  tool_executor.py  tool_parser.py  trigger.py
multiagenticswarm/core/migrations/: __init__.py  migration_template.py  v1_0_0_to_v1_1_0.py
multiagenticswarm/llm/: __init__.py  providers.py  tool_calling_mixin.py
multiagenticswarm/tools/: collaboration_tools.py  terminal.py
multiagenticswarm/utils/: __init__.py  log_viewer.py  logger.py
tests/: __init__.py  conftest.py  test_agent.py  test_automation.py  test_base_tool.py  test_langgraph_integration.py  test_mcp.py  test_multiagenticsystem.py  test_state.py  test_state_config.py  test_state_enhancements.py  test_state_integration.py  test_state_migration.py  test_system.py  test_task.py  test_tool.py  test_tool_executor.py  test_tool_parser.py  test_trigger.py
tests/unit/: test_prompt_parser.py
